src/projects/project-item.scss
:root {
  --project-item-background-color: #dde;
  --project-item-border-color: #99a;
  --project-item-link-color: #333;
  --project-item-visited-link-color: #777;
  --project-item-expander-color: black;
  --project-item-description-background-color: #e5e5f5;
  --project-item-description-border-color: #99a;
  --project-item-description-text-color: black;
}

.dark {
  --project-item-background-color: #223;
  --project-item-border-color: #667;
  --project-item-link-color: #eee;
  --project-item-visited-link-color: #bbb;
  --project-item-expander-color: white;
  --project-item-description-background-color: #113;
  --project-item-description-border-color: #667;
  --project-item-description-text-color: #eee;
}

.project-item {
  max-width: 500px;
  margin-bottom: 10px;
  
  > .row {
    display: flex;
    align-items: center;
    min-height: 50px;
    border: 5px solid;
    border-color: var(--project-item-border-color);
    background-color: var(--project-item-background-color);
    transition: border-radius 0.4s ease-in-out;
    
    .app-link {
      margin-left: 10px;
      font-size: 1.2em;
      color: var(--project-item-link-color);

      &:visited {
        color: var(--project-item-visited-link-color);
      }
    }

    .space {
      margin-left: auto;
    }
    
    .repo-link {
      margin: 0 10px;
      
      > picture {
        display: flex;

        > img {
          height: 40px;
        }
      }
    }
    
    .expander {
      width: 25px;
      cursor: pointer;
    
      &::after {
        content: '';
        display: inline-block;
        margin-left: 5px;
        padding: 3px;
        width: 0.1px;
        border: solid;
        border-color: var(--project-item-expander-color);
        border-width: 0 3px 3px 0;
      }
    }
  }

  > .expandable-section {
    overflow-y: hidden;
    transition: max-height 0.4s ease-in-out;

    > .description {
      padding: 8px;
      background-color: var(--project-item-description-background-color);
      border: solid;
      border-color: var(--project-item-description-border-color);
      border-width: 0 2px 2px 2px;
    }
  }

  &.collapsed {
    > .row {
      border-radius: 8px;

      .expander::after {
        transform: translateY(-4px) rotate(45deg);
        -webkit-transform: translateY(-4px) rotate(45deg);
      }
    }

    > .expandable-section {
      max-height: 0;
    }
  }

  &.expanded {
    > .row {
      border-radius: 8px 8px 0 0;

      .expander::after {
        margin-top: 22px;
        transform: translateY(-8px) rotate(-135deg);
        -webkit-transform: translateY(-8px) rotate(-135deg);
      }
    }

    > .expandable-section {
      max-height: 100px;
    }
  }
}

